--- a/groups.yaml
+++ b/groups.yaml
@@ -1,300 +1,6 @@
-default_view:
-  view: yes
-  icon: mdi:home
-  entities:
-    - group.device_tracker
-    - group.devices_dev_bed_room
-    - group.devices_dev_living_room
-    - group.devices_dev_buero
-    - group.room_climate
-    - weather.dark_sky
-    - group.transport_travel_1
-    - group.transport_travel_2
-
-bed_room:
-  name: !secret bed_room1
-  view: yes
-  entities:
-    - group.devices_bed_room
-    - group.bedroom_lights_part_1
-    - group.bedroom_lights_part_2
-    - group.bedroom_lights_part_3
-    - group.wakeuplight
-    - group.bed_room_other
-
-living_room:
-  name: Wohnzimmer
-  view: yes
-  entities:
-    - group.devices_living_room
-    - group.living_room_lights_part_1
-
-office:
-  name: Büro
-  view: yes
-  entities:
-    - light.hue_white_lamp_1
-    - switch.wind_machine
-
-automation_view:
-  view: yes
-  name: Automatisierungen
-  icon: mdi:arrow-right-drop-circle
-  entities:
-    - group.light_automations
-    - group.hass_automations
-    - group.hass_automations2
-    - group.hass_automations3
-
-settings_view:
-  view: yes
-  name: Einstellungen
-  icon: mdi:settings
-  entities:
-    - group.server_info
-    - group.isp_performance
-    - group.fail2ban_jails
-    - input_select.log_level
-    - group.links
-    - group.sonoff_3028
-    - switch.developer_mode
-
-### Groups not as views
-
-devices_bed_room:
+wohnzimmer:
   entities:
     - media_player.braviatv_1
-    - media_player.mpd
     - media_player.playstation_4
-
-devices_living_room:
-  entities:
-    - media_player.braviatv_2
-
-office_lights:
-  name: Bürobeleuchtung
-  entities:
-    - light.hue_white_lamp_1
-
-devices_dev_bed_room:
-  name: !secret bed_room1
-  entities:
-    - switch.braviatv_1
-    - switch.playstation_4
-    - switch.mpd
-    - light.deckenspots
+    - light.deckenleuchte
     - light.stehlampe
-
-devices_dev_living_room:
-  name: Wohnzimmer
-  entities:
-    - switch.braviatv_2
-    - light.wohnzimmer
-
-devices_dev_buero:
-  name: Büro
-  entities:
-    - light.buro
-    - switch.wind_machine
-
-transport_travel_1:
-  name: !secret traffic_name_dev1
-  entities:
-    - sensor.google_travel_time_dev1_driving
-    - sensor.google_travel_time_dev1_transit
-    - sensor.google_travel_time_dev1_bicycling
-    - sensor.google_travel_time_dev1_dynamic_home
-    - sensor.uberx_price
-    - sensor.uberx_time
-
-transport_travel_2:
-  name: !secret traffic_name_dev2
-  entities:
-    - sensor.google_travel_time_dev2_driving
-    - sensor.google_travel_time_dev2_transit
-    - sensor.google_travel_time_dev2_bicycling
-    - sensor.google_travel_time_dev2_dynamic_home
-
-weather:
-  name: Wetter
-  entities:
-    - sensor.zamg_temperature
-    - sensor.zamg_humidity
-    - sensor.zamg_wind_speed
-    - sensor.zamg_precipitation
-    - sensor.zamg_dewpoint
-    - !secret luftdaten_s1id
-    - !secret luftdaten_s2id
-
-room_climate:
-  name: Raumklima
-  entities:
-    - sensor.wemosd1_room_temperature
-    - sensor.wemosd1_room_humidty
-    - sensor.sonoff_office_temperature
-    - sensor.sonoff_office_humidty
-
-server_info:
-  name: Server Info
-  entities:
-    - sensor.uptime
-    - sensor.processor_use
-    - sensor.cpu_speed
-    - sensor.memory_use_percent
-    - sensor.swap_use_percent
-    - sensor.disk_use_percent
-    - sensor.disk_free
-    - sensor.database_size_hass
-    - sensor.database_size_nc
-    - sensor.cpu_temperature
-    - sensor.network_in_eth0
-    - sensor.network_out_eth0
-    - sensor.hass_version
-
-links:
-  name: Links
-  control: hidden
-  entities:
-    - weblink.router
-    - weblink.pixelserv
-    - weblink.ympd
-    - !secret wlrst_name
-    - !secret wlmst_name
-    - weblink.home_assistant
-
-hass_automations:
-  name: HA-Automatisierung
-  control: hidden
-  entities:
-    - automation.ssl_expiry_notification
-    - automation.update_notifications
-    - automation.log_level
-    - automation.disk_use_alarm
-    - automation.lights_and_tv_off
-    - automation.gaming_ps4
-    - automation.stop_playing_ps4
-    - automation.ready_for_bed
-    - automation.get_sonoff_3028_version
-    - automation.sonofftasmota_update_availability
-    - automation.update_sonofftasmota
-
-hass_automations2:
-  name: Theme Automatisierung
-  control: hidden
-  entities:
-    - automation.startup_theme
-
-hass_automations3:
-  name: Anwesenheit
-  control: hidden
-  entities:
-    - automation.left_home_device1
-    - automation.left_home_device2
-
-device_tracker:
-  name: Familie
-  control: hidden
-  entities:
-    - !secret device2
-    - !secret device1
-
-some_settings:
-  name: Einstellungen
-  control: hidden
-  entities:
-    - input_select.log_level
-
-sonoff_3028:
-  name: sonoff 3028
-  entities:
-    - sensor.sonoff_3028_version
-    - sensor.sonoff_uptime
-    - sensor.sonoff_vcc
-    - sensor.sonoff_rssi
-    - script.1515152489107
-    - script.1515151540311
-    - script.1515152338107
-    - script.1515152636091
-
-isp_performance:
-  name: Speedtest
-  entities:
-    - sensor.speedtest_download
-    - sensor.speedtest_upload
-    - sensor.speedtest_ping
-
-bed_room_other:
-  name: Anderes
-  entities:
-    - input_datetime.time_turnoff_devices
-
-bedroom_lights_part_1:
-  name: Deckenspots
-  control: hidden
-  entities:
-    - light.deckenspots
-    - light.hue_color_spot_1
-    - light.hue_color_spot_2
-    - light.hue_color_spot_3
-    - script.scene_bright
-    - script.scene_nightlight
-    - input_boolean.loop_livingcolors_1
-
-bedroom_lights_part_2:
-  name: Stehlampe
-  control: hidden
-  entities:
-    - light.stehlampe
-    - input_boolean.loop_livingcolors_2
-
-bedroom_lights_part_3:
-  name: Beleuchtungsszenen
-  control: hidden
-  entities:
-    - script.scene_tropical_twilight
-    - script.scene_arctic_aurora
-    - script.scene_spring_blossom
-    - input_select.hue_scenes
-
-living_room_lights_part_1:
-  name: Wohnzimmerspots
-  control: hidden
-  entities:
-    - light.wohnzimmer
-    - light.color_temperature_light_1
-    - light.color_temperature_light_2
-    - light.color_temperature_light_3
-    - light.color_temperature_light_4
-    - light.color_temperature_light_5
-
-light_automations:
-  name: Lichtautomatisierung
-  control: hidden
-  entities:
-    - automation.hue_scene_activation
-    - automation.random_light
-    - automation.random_light_stehlampe
-    - automation.wakeup_light_bedroom
-
-fail2ban_jails:
-  name: fail2ban
-  entities:
-    - sensor.fail2ban_homeassistant
-    - sensor.fail2ban_nextcloud
-    - sensor.fail2ban_sshd
-
-wakeuplight:
-    name: Aufwachbeleuchtung
-    control: hidden
-    entities:
-      - input_datetime.wakeup_alarm_time
-      - input_number.wakeup_duration
-      - input_boolean.wakeup
-      - input_boolean.wakeup_weekends
-
-developer:
-    name: Developer
-    view: false
-    icon: mdi:developer-board
-    entities:
-      - group.catchall
