--- a/automations.yaml
+++ b/automations.yaml
@@ -1,50 +1,23 @@
-#- alias: Automatic Theme Change
-#  id: '84938322222'
-#  trigger:
-#    - platform: homeassistant
-#      event: start
-#    - platform: state
-#      entity_id: sun.sun
-#  action:
-#    - service_template: frontend.set_theme
-#      data_template:
-#        name: >
-#          {% if states.sun.sun.state == "above_horizon" %}
-#            basics
-#          {% else %}
-#            darkblue
-#          {% endif %}
-
 - alias: Startup Theme
   id: '20180524211900'
   trigger:
-    - platform: homeassistant
-      event: start
-    - platform: state
-      entity_id: sun.sun
-      to: above_horizon
-    - platform: state
-      entity_id: sun.sun
-      to: below_horizon
+  - platform: homeassistant
+    event: start
+  - platform: state
+    entity_id: sun.sun
+    to: above_horizon
+  - platform: state
+    entity_id: sun.sun
+    to: below_horizon
   action:
-    - service_template: frontend.set_theme
-      data_template:
-        name: >
-          {% if states.sun.sun.state == "above_horizon" %}
-            clear
-          {% else %}
-            dark_clear
-          {% endif %}
-    - service_template: >
-        {% if states.sun.sun.state == "above_horizon" %}
-          shell_command.dark_to_clear_wp
-        {% else %}
-          shell_command.clear_to_dark_wp
-        {% endif %}
-  #- service: frontend.set_theme
-  #  data:
-  #    name: clear
-
+  - service_template: "{% if states.sun.sun.state == \"above_horizon\" %}\n  shell_command.dark_to_clear_wp\n\
+      {% else %}\n  shell_command.clear_to_dark_wp\n{% endif %}\n"
+  - service_template: frontend.set_theme
+    data_template:
+      name: "{% if states.sun.sun.state == \"above_horizon\" %}\n  clear\n{% else\
+        \ %}\n  dark_clear\n{% endif %}\n"
+  - service: script.lovelace_reload
+  
 - alias: SSL expiry notification
   id: '1500779870955'
   trigger:
@@ -76,8 +49,8 @@
   action:
     service: !secret notify_ios
     data_template:
-      message: Your harddrive is running out of Space! /dev/root:{{ states.sensor.disk_use_.state
-        }}%!
+      message: 'Your harddrive is running out of space: /dev/root: {{ states.sensor.disk_use_percent.state
+        }}%'
 
 - alias: Lights and TV off
   id: '756390032'
@@ -93,8 +66,14 @@
   - service: homeassistant.turn_off
     data:
       entity_id:
-      - switch.braviatv_1
-      - light.zimmer
+      - media_player.braviatv_1
+      - media_player.playstation_4
+      - light.schlafzimmer
+      - light.badezimmer
+      - light.kuche
+      #- light.vorzimmer
+      - light.toilette
+      - light.wohnzimmer
 
 - alias: Sonoff-Tasmota update availability
   id: '111999111'
@@ -103,12 +82,8 @@
     at: 09:15:00
   condition:
     condition: template
-#    value_template: '{{ states.sensor.sonoff_maddox_version.state | replace("v", "")
-#      | replace(".","") != states.sensor.sonoff_3028_version.state[:5] | replace(".","")
-#      }}'
     value_template: '{{ states.sensor.sonoff_maddox_version.state | replace("v", "")
-       != states.sensor.sonoff_3028_version.state[:5]
-      }}'
+      != states.sensor.sonoff_3028_version.state[:5] }}'
   action:
   - service: !secret notify_ios
     data_template:
@@ -117,7 +92,6 @@
       data:
         push:
           category: sonoffupdate
-
 - alias: Update Sonoff-Tasmota
   id: '999111999'
   trigger:
@@ -136,54 +110,42 @@
   - platform: time
     at: 09:00:00
   action:
-  - service: script.2215152489107
-  - service: script.0101010101010
+  - service: mqtt.publish
+    data:
+      topic: wemosd1_1/cmnd/Status
+      payload: '0'
+  - service: mqtt.publish
+    data:
+      topic: sonoff_3082/cmnd/Status
+      payload: '0'
+  - service: mqtt.publish
+    data:
+      topic: sonoff_3463/cmnd/Status
+      payload: '0'
 
 - alias: left home device1
   id: '1515583360531'
   trigger:
-  - entity_id: !secret device1
+  - entity_id: !secret person_1
     for:
       minutes: 5
     from: home
     platform: state
     to: not_home
   action:
-  - data:
-      entity_id: light.zimmer
-    service: light.turn_off
-  - data:
-      entity_id: media_player.playstation_4
-    service: media_player.turn_off
-  - data:
-      entity_id: media_player.braviatv_1
-    service: media_player.turn_off
-  - data:
-      entity_id: switch.mopidy
-    service: switch.turn_off
-  - data:
-      entity_id: light.buro
-    service: light.turn_off
-  - data:
-      entity_id: input_boolean.loop_livingcolors_2
-    service: input_boolean.turn_off
-  - data:
-      entity_id: input_boolean.loop_livingcolors_1
-    service: input_boolean.turn_off
-    
-- action:
-  - data:
-      entity_id: media_player.braviatv_2
-    service: media_player.turn_off
-  alias: left home device2
-  id: '9915583360531'
-  trigger:
-  - entity_id: !secret device2
-    for:
-      minutes: 5
-    from: home
-    platform: state
-    to: not_home
+  - service: homeassistant.turn_off
+    data:
+      entity_id:
+      - media_player.braviatv_1
+      - media_player.playstation_4
+      - light.schlafzimmer
+      - light.badezimmer
+      - light.kuche
+      - light.vorzimmer
+      - light.toilette
+      - light.wohnzimmer
+      - input_boolean.loop_livingcolors_1
+      - input_boolean.loop_livingcolors_2
 
 - alias: Log Level
   id: '1500589870955'
@@ -197,7 +159,7 @@
     service: logger.set_level
     data_template:
       homeassistant.components: '{{ trigger.to_state.state }}'
-      
+
 - alias: WakeUp Light Bedroom
   id: '1500581870955'
   trigger:
@@ -211,7 +173,7 @@
       entity_id: input_boolean.wakeup
       state: 'on'
     - condition: state
-      entity_id: !secret device1
+      entity_id: !secret person_1
       state: home
     - condition: or
       conditions:
@@ -222,7 +184,8 @@
         entity_id: binary_sensor.workday_sensor
         state: 'on'
   action:
-    service: script.wakeup_zimmer
+    service: script.wakeup_schlafzimmer
+
 - alias: Hue Scene Activation
   id: '1500589870955'
   trigger:
@@ -262,8 +225,8 @@
       transition: 5
       brightness: 255
 
-- alias: Gaming PS4
-  id: '1519076898412'
+- id: '1519076898412'
+  alias: Gaming PS4
   trigger:
   - entity_id: media_player.playstation_4
     platform: state
@@ -275,16 +238,16 @@
     entity_id: sun.sun
     state: below_horizon
   - condition: state
-    entity_id: !secret device1
+    entity_id: !secret person_1
     state: home
   action:
   - data:
-      group_name: Deckenspots
+      group_name: Deckenleuchte
       scene_name: Arctic aurora
     service: hue.hue_activate_scene
-    
-- alias: Stop playing PS4
-  id: '1519077187087'
+
+- id: '1519077187087'
+  alias: Stop playing PS4
   trigger:
   - entity_id: media_player.playstation_4
     from: playing
@@ -296,16 +259,16 @@
   - after: '21:00:00'
     condition: time
   - condition: state
-    entity_id: !secret device1
+    entity_id: !secret person_1
     state: home
   action:
   - data:
-      group_name: Deckenspots
+      group_name: Deckenleuchte
       scene_name: Nightlight
     service: hue.hue_activate_scene
 
-- alias: Ready for bed
-  id: '1519077406569'
+- id: '1519077406569'
+  alias: Ready for bed
   trigger:
   - at: '21:30:00'
     platform: time
@@ -314,26 +277,16 @@
     entity_id: sun.sun
     state: below_horizon
   - condition: state
-    entity_id: !secret device1
+    entity_id: !secret person_1
     state: home
   - condition: state
     entity_id: binary_sensor.workday_sensor
     state: 'on'
   action:
   - data:
-      group_name: Zimmer
+      group_name: Wohnzimmer
       scene_name: Nightlight
     service: hue.hue_activate_scene
-
-#- alias: SC Tiles update info
-#  trigger:
-#    platform: state
-#    entity_id: sensor.sc_tiles_latest_version
-#  action:
-#    service: persistent_notification.create
-#    data:
-#      title: Update available
-#      message: A new version for [Tiles custom state card](https://github.com/c727/home-assistant-tiles#changelog) is available.
 
 - alias: Random light - Stehlampe
   id: '20180513163100'
@@ -347,29 +300,158 @@
     state: 'on'
   action:
     service: light.turn_on
-    #entity_id: light.zimmer
     data:
       entity_id: light.stehlampe
       effect: random
       transition: 5
       brightness: 132
-- id: '1534393836262'
-  alias: location update dev2
+
+- id: '1553547958805'
+  alias: Turn off magic mirror
+  trigger:
+  - entity_id: sensor.is_home
+    for:
+      minutes: 15
+    from: 'true'
+    platform: state
+    to: 'false'
+  action:
+  - data:
+      entity_id: switch.magic_mirror
+    service: switch.turn_off
+
+- id: '1553548399232'
+  alias: Turn on magic mirror
+  trigger:
+  - entity_id: !secret person_1
+    platform: state
+    to: home
+  action:
+  - data:
+      entity_id: switch.magic_mirror
+    service: switch.turn_on
+
+- id: '1555301143838'
+  alias: turn off loop-effect Stehlampe
+  trigger:
+  - entity_id: light.stehlampe
+    platform: state
+    to: 'off'
+  condition: []
+  action:
+  - data:
+      entity_id: input_boolean.loop_livingcolors_2
+    service: input_boolean.turn_off
+
+- id: '1555301210835'
+  alias: turn off loop-effekt Deckenspots
+  trigger:
+  - entity_id: light.deckenspots
+    platform: state
+    to: 'off'
+  condition: []
+  action:
+  - data:
+      entity_id: input_boolean.loop_livingcolors_1
+    service: input_boolean.turn_off
+
+- id: '1555971390000'
+  alias: robovac auto turn on
   trigger:
   - platform: time_pattern
-    minutes: /30
-    seconds: 0
+    minutes: '/30'
   condition:
-    condition: or
+    condition: and
+    conditions:
+      - condition: numeric_state
+        entity_id: counter.vacuum_counter
+        below: 2
+      - condition: state
+        entity_id: sensor.is_home
+        state: 'false'
+        for:
+          minutes: 20
+      - condition: state
+        entity_id: binary_sensor.workday_sensor
+        state: 'on'
+      - condition: or
+        conditions:
+          - condition: and
+            conditions:
+              - condition: state
+                entity_id: sensor.robovac_battery
+                state: '100'
+              - condition: numeric_state
+                entity_id: counter.vacuum_counter
+                below: 2
+              - condition: time
+                after: '07:00:00'
+                before: '15:00:00'
+          - condition: and
+            conditions:
+              - condition: numeric_state
+                entity_id: sensor.robovac_battery
+                above: 85
+              - condition: state
+                entity_id: counter.vacuum_counter
+                state: '1'
+              - condition: time
+                after: '13:00:00'
+                before: '15:30:00'
+  action:
+  - service: vacuum.turn_on
+    data:
+      entity_id: vacuum.robovac
+  
+- id: '15559713900111'
+  alias: robovac clean counter
+  trigger:
+  - platform: template
+    value_template: "{{ is_state_attr('vacuum.robovac', 'status', 'cleaning') }}"
+  action:
+  - service: counter.increment
+    data:
+      entity_id: counter.vacuum_counter
+
+- id: '15559754790000'
+  alias: robovac clean notification
+  trigger:
+  - platform: time_pattern
+    hours: '/2'
+  condition:
+    condition: and
     conditions:
       - condition: state
-        entity_id: !secret device2
-        state: 'not_home'
-      - condition: state
-        entity_id: !secret device2
-        state: 'away'
+        entity_id: !secret person_1
+        state: 'home'
+        for:
+          minutes: 20
+      - condition: time
+        after: '07:00:00'
+        before: '22:00:00'
+      - condition: numeric_state
+        entity_id: counter.vacuum_counter
+        above: 0
   action:
-  - service: mqtt.publish
+  - service: !secret notify_ios
+    data_template:
+      message: 'Schurli ist zu entleeren. Anzahl der Saugvorgänge: {{ states.counter.vacuum_counter.state }}'
+      data:
+        push:
+          category: emptyrobovac
+
+- alias: robovac cleaned
+  id: '15559754790001'
+  trigger:
+    platform: event
+    event_type: ios.notification_action_fired
+    event_data:
+      actionName: EMPTY_ROBOVAC_NOW
+  condition:
+    condition: state
+    entity_id: !secret person_1
+    state: 'home'
+  action:
+  - service: counter.reset
     data:
-      topic: !secret dev2_ot_topic
-      payload: '{"_type":"cmd","action":"reportLocation"}'
+      entity_id: counter.vacuum_counter
