--- a/media_player.yaml
+++ b/media_player.yaml
@@ -1,25 +1,10 @@
-#- platform: mpd
-#  name: mpd
-#  host: !secret mpd_ip
-#  port: !secret mpd_port
-- platform: bravia_nue
+- platform: braviatv_psk
   name: braviatv_1
   host: !secret tv_tv1_ip
   psk: !secret tv_tv1_psk
   mac: !secret tv_tv1_mac
   android: true
-  wol_rest: false
-- platform: bravia_nue
-  name: braviatv_2
-  host: !secret tv_tv2_ip
-  psk: !secret tv_tv2_psk
-  mac: !secret tv_tv2_mac
-  android: false
-  wol_rest: true
-  flask_host: !secret flask_host
-  flask_port: !secret flask_port
-  wol_machine: bravia_W705C
-- platform: ps4
+- platform: ps4_node
   host: !secret ps4waker_host
   ps4_ip: !secret ps4_ip
   imagemap_json: https://raw.githubusercontent.com/Knapoc/homeassistant-config/master/games.json
