--- a/automations.yaml
+++ b/automations.yaml
@@ -96,7 +96,7 @@
   id: '999111999'
   trigger:
     platform: event
-    event_type: ios.notification_action_fired
+    event_type: mobile_app.notification_action_fired
     event_data:
       actionName: UPDATE_SONOFF
   action:
@@ -444,7 +444,7 @@
   id: '15559754790001'
   trigger:
     platform: event
-    event_type: ios.notification_action_fired
+    event_type: mobile_app.notification_action_fired
     event_data:
       actionName: EMPTY_ROBOVAC_NOW
   condition:
